--- a/estilo.css
+++ b/estilo.css
@@ -5,6 +5,20 @@
 .centrar{
     margin: 0 auto;
 }
+.show{
+    background-color: #001f2f;
+}
+.show .nav-link-custom{
+    background-color: rgba(0, 0, 0, 0.2);
+}
+.navbar-nav{
+  /*   background-color: #fb3245; */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin: 20px 0;
+  
+}
 .tamaño{
     font-size: 50px;
     width: 20px;
@@ -23,7 +37,11 @@
     background: #001f2f !important;
 }
 .nav-link-custom{
+    width: 100px;
+    text-align: center;
+   
     padding: 5px 10px;
+   
     color: #fff;
     font-size: 15px;
     text-transform: uppercase;
@@ -88,22 +106,23 @@
    
     
 }
-
-.full-video{
-    width: 100%;
-    top: 0;
-    left: 0;
+.whatsapp {
+    display: flex;
+    height: 80px;
+    width: 80px; 
+    border-radius: 50%;
+    justify-content: center;
     position: fixed;
-    z-index: -2;
-    background-blend-mode: soft-light;
-    background-color: rgb(42, 44, 44);
+    z-index: 10;
+    bottom: 10px;
+    right: 10px;
+    margin: 10px;
+    bottom: 20px;
 
 }
-video{
-    width: 100%;
-    height: 100%;
-    background-blend-mode: soft-light;
-    background-color: rgb(42, 44, 44);
+.whatsapp i{
+    margin: 0 auto;
+    font-size: 50px;
 }
 .servicios{
     width: 100%;
@@ -209,6 +228,7 @@ video{
 
     }
     .slide img{
+       
         width: 100%;
         height: 90vh;
         object-fit: cover;
