--- a/css/desarrollo-web.css
+++ b/css/desarrollo-web.css
@@ -4,29 +4,41 @@
     display: flex;
     flex-direction: column;
     background-image: url('https://image.freepik.com/foto-gratis/diseno-web-online_53876-95309.jpg') ;
+    background-image: url('https://cdn.pixabay.com/photo/2016/11/29/06/15/plans-1867745_960_720.jpg') ;
     background-color: rgb(73, 75, 75);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-blend-mode: soft-light;
 }
+.contenedor-web h3{
+    font-size: 60px;
+    font-family: 'Raleway';
+    text-align: center;
+    padding: 10px 0;
+}
 .servicios-web-first{
     width: 100%;
     height: 100%;
-    padding: 50px 0;
     margin: 0 auto;
+    
 }
-.servicios-web-first h3{
-    font-size: 70px;
-    text-align: center;
-    padding: 10px;
+.servicios-web-first{
+    display: flex;
+    padding: 20px 0;
 }
 .servicios-web-first p{
     font-size: 25px;
-    width: 80%;
-    text-align: center;
-    margin: 0 auto;
+    color: #000;
+    align-self: flex-start;
+    text-align: left;
+    padding: 30px 50px;
+}
+.servicios-web-first img{
+    width: 600px;
+    height: 400px;
     padding: 20px;
+    object-fit: contain;
 }
 .servicios-web-second{
     background-color: #001f2f;
@@ -37,10 +49,10 @@
 }
 .servicios-web-second h4{
     font-size: 60px;
-    text-align: center;
-    padding: 50px;
     color: #fff;
-    text-transform: uppercase;
+    font-family: 'Raleway';
+    text-align: center;
+    padding: 30px 0;
 }
 .contenedor-second{
     padding: 50px 0;
@@ -63,31 +75,41 @@
     display: block;
     margin: 10px 0 0 0;
 }
-.contenedor-card{
-    display: flex;
-    justify-content: center;
-    flex-flow: row wrap;
-    padding: 50px 0;
+.servicios-web-forma{
+    background-color:#f8f8f8;
+}
+.servicios-web-forma h3{
+    font-size: 40px;
+    color: #000;
+    text-align: center;
+    font-family: 'Raleway';
+    padding: 20px 0;
     
 }
-.card{
-    text-align: center;
-    margin: 20px;
-    padding: 20px 0;
+.forma-desc-container{
+    height: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
 }
-.card-title{
-    font-size: 30px;
-    font-weight: bolder;
-    color: #28315c;
+.forma-desc img{
+    width: 300px;
+    height: 300px;
 }
-.estilo-card-text{
-    color: #001f2f;
-    font-family: 'Roboto';
-    font-weight: bolder;
+.forma-desc p{
+    color: #000;
     font-size: 20px;
+    text-align: center;
 }
-.estilo-card-text span{
-    font-size: 40px;
+@media (max-width: 999px){
+    .servicios-web-desc{
+        display: flex;
+        flex-flow: column wrap;
+    }
+    .servicios-web-desc img{
+        width: 80%;
+        margin: 0 auto;
+    }
 }
 @media (max-width: 750px){
     .servicios-web-first h3{
@@ -113,20 +135,23 @@
         width: 50%;
         margin: 0 auto;
     }
+    .servicios-web-desc img{
+        width: 100%;
+        margin: 0;
+        object-fit: contain;
+    }
 }
 @media (max-width: 450px){
     .servicios-web-first h3{
         font-size: 35px;
     }
-    .servicios-web-first p{
-        font-size: 15px;
+    .servicios-web-desc p{
+        font-size: 18px;
     }
     .servicios-web-second h4{
-        font-size: 25px;
+        font-size: 30px;
     }
-    .card-title{
-        font-size: 25px;
-        font-weight: bolder;
-        color: #28315c;
+    .servicios-web-forma h3{
+        font-size: 30px;
     }
 }
