--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,7 +8,7 @@
     margin: 0 auto;
 }
 .show{
-    background-color: #001f2f;
+    background-color: #03213a;
     /* background-color: transparent; */
 }
 .show .nav-link-custom{
@@ -40,7 +40,7 @@
     margin: 20px 0;
 }
 .top-nav-collapse{
-    background: #001f2f !important;
+    background: #03213a !important;
 }
 .nav-link-custom{
     width: 120px;
@@ -64,7 +64,7 @@
     color: #ffe83f !important;
 }
 .dropdown-menu{
-    background-color: #001f2f !important;
+    background-color: #03213a !important;
     padding: 20px;
 }
 .dropdown-item{
@@ -79,7 +79,7 @@
 .contacto-border:hover{
     transition: 0.5s;
     background-color: #fff;
-    color: #001f2f;
+    color: #03213a;
 }
 
   /*   HEADER  */
@@ -89,15 +89,12 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    background-image: url('https://cdn.pixabay.com/photo/2016/06/25/12/52/laptop-1478822_960_720.jpg') ;
-    background-image: url('https://cdn.pixabay.com/photo/2015/01/08/18/25/desk-593327_960_720.jpg');
+    background-image: url('../img/fondo-index.jpg');
     background-color: rgb(73, 75, 75);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-blend-mode: soft-light;
-
-    
 }
 .header-texto{
     position: relative;
@@ -132,10 +129,11 @@
 }
 
    /*  ICONO WHATSAPP */
-.whatsapp {
+ .whatsapp {
     display: flex;
-    height: 80px;
-    width: 80px; 
+    height: 60px;
+    width: 60px; 
+    border: none;
     border-radius: 50%;
     justify-content: center;
     position: fixed;
@@ -148,10 +146,10 @@
     
 }
 .whatsapp i{
-    margin: 0 auto;
-    font-size: 50px;
+    margin: 10px;
+    font-size: 38px;
     color: #fff;
-}
+} 
 
 
     /* SERVICIOS */
@@ -159,10 +157,10 @@
 .servicios{
     width: 100%;
     height: 100%;
-    /* background: #001f2f; */
+    /* background: #03213a; */
   /*   background: #fff; */
-     background: #001f2f;
-     background-color: #f3f3f3;
+     background: #fff;
+    
      padding: 10px 0 50px 0;
 }
     .servicios h1{
@@ -185,7 +183,9 @@
     .servicios-container{
         display: flex;
         flex-flow: row wrap;
-        justify-content: space-around;
+        justify-content: space-evenly;
+        width: 80%;
+        margin: 0 auto;
        
     }
         .servicios-card{
@@ -202,8 +202,13 @@
             margin: 10px;
         }
             .servicios-card img{
-                width: 300px;
-                height: 300px;
+                width: 300px ;
+                height: 300px ;
+            }
+            .servicios-card img:nth-child(4){
+                width: 400px ;
+                height: 400px ;
+                background: #000;
             }
             .servicios-card h3{
                 color: #000;
@@ -212,9 +217,10 @@
             }
             .servicios-card p{
                 color: #000;
-                font-size: 15px;
-                padding: 20px;
+                font-size: 18px;
+                padding: 15px 5px;
                 font-family: 'Roboto', sans-serif;
+                text-align: center;
             }
             .servicios-card button {
                 align-self: center;
@@ -235,19 +241,23 @@
             }
             .servicios-card button:hover{
                 background: #ffe83f; 
-                color: #001f2f  ;
+                color: #03213a  ;
             }
 
 
 
 .sobre-nosotros{
-    background-color: darkred;
+   /*  background-color: darkred;
     background-image: url('https://cdn.pixabay.com/photo/2018/03/10/12/00/paper-3213924_960_720.jpg');
+    background-image: url('https://images.unsplash.com/photo-1499540633125-484965b60031?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80');
+    
     background-color: rgb(73, 75, 75);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-blend-mode: soft-light;
+    background-blend-mode: soft-light; */
+    background-color: linear-gradient(to right, #ff6b3e, #ffac34);
+    background: linear-gradient(to right, #123343, #14568d);
     padding: 100px 0;
 }
 .contenedor-sobre-nosotros{
@@ -274,12 +284,13 @@
            /*  TRABAJOS */
 
 .trabajos{
-        background: #001f2f;
+        background: #03213a;
+        background-color: #fff;
         width: 100%;
         height: 100%;
 }
     .trabajos h2{
-        color: #fff;
+        color: #000;
         font-size: 50px;
         font-family: 'Roboto', sans-serif;
         text-align: center;
@@ -312,10 +323,10 @@
         width: 100%;
         padding: 10px 30px;
         border: none;
-        background: transparent;
-        border: 2px solid #fff;
+        background: #fffb59;
+        border: 2px solid #fffb59;
         border-radius: 50px;
-        color: #fff;
+        color: #000;
         font-size: 16px;
         font-family: 'Roboto', sans-serif;
         text-transform: uppercase;
@@ -324,7 +335,7 @@
     .link-trabajos button:hover{
         background:#ffd366 ;
         border: 2px solid #ffd366;
-        color: #001f2f ;
+        color: #03213a ;
     }
 
 
@@ -341,6 +352,7 @@
     background-size: cover;
     background-position: center;
     background-blend-mode: soft-light;
+    object-fit: cover;
     
     
     /* background-image: linear-gradient(to right, #ff3d56  , #20a1d8); */
@@ -401,7 +413,7 @@
     padding: 30px;
 }
     .contacto-texto{
-        padding: 50px;
+        padding: 20px 0;
     }
     .contacto-texto h3{
         color: #000;
@@ -444,7 +456,7 @@
         margin: 0 auto;
         width: 150px;
         background-color: #ffd366;
-        color: #001f2f;
+        color: #03213a;
         padding: 10px;
         border: none;
     }
@@ -463,7 +475,7 @@
 .footer{
     width: 100%;
     height: 100%;
-      background-color: #001f2f;
+    background-color: #03213a;
 }
     .footer-contenedor{
         width: 80%;
@@ -508,17 +520,19 @@
    
 }
 .footer-redes{
-    width: 80%;
-    margin: 0 auto;
+    background: #000;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    padding: 20px 0;
 }
     .footer-redes p{
         color: #fff;
-        padding: 30px 0;
+        margin: 0;
+       /*  padding: 30px 0; */
     }
     .redes-sociales{
-        padding: 20px;
+       /*  padding: 20px; */
     }
     .redes-sociales i{
         font-size: 30px;
@@ -607,15 +621,17 @@
         color: #fff;
     }
     .whatsapp {
-        height: 65px;
-        width: 30px; 
+        height: 50px;
+        width: 50px; 
         bottom: 10px;
+        border: none;
     }
     .whatsapp i{
-        margin: 0 auto;
-        font-size: 35px;
+        margin: auto;
+        font-size: 30px;
     }
 }
+
 @media (max-width: 650px){
     .header-encabezado h3{
         font-size: 70px;
@@ -627,7 +643,8 @@
         height: 40px;
     }
     .servicios h1{
-        font-size: 40px;
+        font-size: 45px;
+        padding: 0;
     }
     .header-encabezado a{
         font-size: 30px;
@@ -677,6 +694,9 @@
     }
 }
 @media (max-width: 490px){
+    .servicios h1{
+        font-size: 30px;
+    }
     .header-texto h3{
         font-size: 60px;
     }
@@ -684,17 +704,19 @@
         font-size: 30px;
     }
     .servicios-card{
+        width: 300px;
        margin: 10px 0;
     }
     .trabajos h2{
-        font-size: 20px;
+        font-size: 30px;
+        padding: 20px ;
     }
     .contacto-form{
        
         width: 100%;
     }
     .contacto-texto h3{
-        margin: 0 auto;
+        font-size: 40px;
     }
     .contenedor-check{
         width: 100%;
@@ -721,9 +743,6 @@
     .header-encabezado p{
         font-size: 25px;
     }
-    .servicios h1{
-        font-size: 25px;
-    }
     .footer-bitcoin img{
         margin: 15px 0;
        
@@ -742,6 +761,13 @@
     .form-check{
         width: 60%;
     }
+    .footer-bitcoin img{
+        width: 150px;
+        height: 150px;
+        object-fit: cover;
+       
+    }
+   
     
 }
 
