--- a/css/marketing.css
+++ b/css/marketing.css
@@ -18,35 +18,79 @@
 .contenedor-marketing{
     width: 100%;
     height: 100%;
-    
-    
+    background-color: #001f2f;
+}
+.contenedor-marketing h3{
+    font-size: 50px;
+    color: #fff;
+    font-family: 'Raleway';
+    text-align: center;
+    padding: 30px 0;
+}
+.contenedor-marketing p{
+    font-size: 20px;
+    text-align: center;
+    color: #fff;
+    padding: 20px;
 }
 .contendor-marketing-first{
-    text-align: center;
-   /*  background-color: #001f2f; */
-    background-color: #fff;
-    padding: 40px 0;
- /*    padding: 20px 0; */
+    width: 100%;
+    background-color: transparent;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    padding: 30px 0;
 }
-.contendor-marketing-first h3{
-    color: #000;
-    font-family: 'Raleway';
-    font-weight: 500;
-    font-size: 60px;
+.contenedor-redes-text{
+    width: 400px;
+    padding: 30px 0;
+}
+.contenedor-redes-text p{
+    font-size: 22px;
+    color: #fff;
+    text-align: left;
+}
+.contenedor-beneficios-redes{
+    width: 600px;
+    height: 100%;
+    background-image: url('https://images.unsplash.com/photo-1483478550801-ceba5fe50e8e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');
+    background-color: rgb(73, 75, 75);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: soft-light;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 30px;
+}
+.beneficios-redes-text{
+    text-align: center;
+    justify-content: center;
+    padding: 40px 10px;
+    margin: 0 auto;
+}
+.beneficios-redes-text h4{
+    font-size: 40px;
+    color: #fff;
     padding: 10px 0;
 }
-.contendor-marketing-first p{
-   /*  margin: 0 300px; */
-    font-family: 'Raleway';
-    font-weight: 300;
-    color: #000;
-    font-size: 25px;
+.beneficios-redes-text p{
+    font-size: 20px;
+    color: #fff;
+}
+.beneficios-redes-text ul li{
+    color: #fff;
+    padding: 10px 0;
+}
+.beneficios-redes-text button{
+    align-content: center;
 }
 .contenedor-marketing-images{
     display: flex;
     justify-content: space-evenly;
     flex-flow: row wrap;
     padding: 20px 0;
+    background-color: #fff;
 }
 .contenedor-marketing-images img{
     width: 400px;
@@ -69,42 +113,16 @@
     display: block;
     margin: 0 0 120px 0;
 }
-.contenedor-marketing-second{
-    width: 100%;
-    padding: 20px 0;
-    background-image: url('https://images.unsplash.com/photo-1483478550801-ceba5fe50e8e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');
-    background-color: rgb(73, 75, 75);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-blend-mode: soft-light;
-    display: flex;
-    flex-wrap: wrap;
-}
-.marketing-second-text{
-    text-align: center;
-    justify-content: center;
-    padding: 40px 10px;
-    margin: 0 auto;
-}
-.marketing-second-text h4{
-    font-size: 40px;
-    color: #fff;
-    padding: 10px 0;
-}
-.marketing-second-text p{
-    font-size: 20px;
-    color: #fff;
-}
-.marketing-second-text ul li{
-    color: #fff;
-    padding: 10px 0;
-}
-.marketing-second-text button{
-    align-content: center;
-}
+
 
 @media (max-width: 800px){
+    .contenedor-beneficios-redes{
+        width: 100%;
+    }
+    .contenedor-redes-text{
+        width: 100%;
+        padding: 20px;
+    }
     .images-marketing{
         display: flex;
         flex-flow: row wrap;
