--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -6,10 +6,14 @@
     background-position: center;
     background-blend-mode: soft-light;
 }
-
+.contenedor-team{
+    padding: 30px;
+    background-color: #4c0949;
+}
 .contenedor-team h3{
     font-size: 50px;
     font-family: 'Raleway';
+    color: #fff;
 }
 .contenedor-team h3::after{
     content: "";
@@ -19,16 +23,25 @@
     display: block;
     margin: 20px auto 0 auto;
 }
-.contenedor-team{
-    padding: 30px;
-    margin: 20px 0;
+.contenedor-team p{
+    color: #fff;
+    font-size: 20px;
+    padding: 40px;
+    text-align: center;
 }
-.contendor-equipo{
+.contenedor-person{
+    background-color: #03213a;
+    
+}
+.container-fluid{
+   
     padding: 30px 0;
 }
 .persona{
     margin: 10px 0;
     padding: 10px 0;
+    text-transform: uppercase;
+    color: #fff;
 }
 .persona img{
     width: 200px;
@@ -36,6 +49,9 @@
     object-fit: cover;
     border-radius: 50%;
     margin: 20px 0;
+}
+.footer{
+    border-top: 1px solid rgba(204, 204, 204, 0.274);
 }
  @media (max-width: 505px){
     .contenedor-team h3{
