--- a/css/desarrollo-web.css
+++ b/css/desarrollo-web.css
@@ -15,7 +15,7 @@
     font-size: 60px;
     font-family: 'Raleway';
     text-align: center;
-    padding: 10px 0;
+    padding: 30px 0 0 0;
 }
 .servicios-web-first{
     width: 100%;
@@ -25,20 +25,29 @@
 }
 .servicios-web-first{
     display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
     padding: 20px 0;
 }
-.servicios-web-first p{
+.web-p{
+    width: 500px;
+}
+.web-p p{
     font-size: 25px;
     color: #000;
     align-self: flex-start;
-    text-align: left;
-    padding: 30px 50px;
+    text-align: center;
+    padding: 20px;
 }
-.servicios-web-first img{
+.web-img{
+    width: 600px;
+}
+.web-img img{
     width: 600px;
     height: 400px;
     padding: 20px;
     object-fit: contain;
+   
 }
 .servicios-web-second{
     background-color: #001f2f;
@@ -83,7 +92,7 @@
     color: #000;
     text-align: center;
     font-family: 'Raleway';
-    padding: 20px 0;
+    padding: 60px 0;
     
 }
 .forma-desc-container{
@@ -95,35 +104,51 @@
 .forma-desc img{
     width: 300px;
     height: 300px;
+    box-shadow: 2px 2px  10px #000;
 }
 .forma-desc p{
+    position: relative;
+    top: -15%;
     color: #000;
     font-size: 20px;
     text-align: center;
 }
-@media (max-width: 999px){
-    .servicios-web-desc{
-        display: flex;
-        flex-flow: column wrap;
+.contenedor-btn-modal{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 30px 0;
+}
+
+
+
+
+
+
+
+
+
+@media (max-width: 1100px){
+    .web-img{
+        width: 100%;
     }
-    .servicios-web-desc img{
-        width: 80%;
-        margin: 0 auto;
+    .web-p{
+        width: 100%;
     }
 }
+
 @media (max-width: 750px){
-    .servicios-web-first h3{
+    .contenedor-web h3{
         font-size: 50px;
     }
-    .servicios-web-first p{
-        font-size: 20px;
-        width: 80%;
-        text-align: center;
-        margin: 0 auto;
-        padding: 20px;
+    .servicios-web-first h3{
+        font-size: 40px;
     }
     .servicios-web-second h4{
-        font-size: 50px;
+        font-size: 40px;
+    }
+    .servicios-web-forma h3{
+        font-size: 40px;
     }
 }
 @media (max-width: 600px){
@@ -135,18 +160,16 @@
         width: 50%;
         margin: 0 auto;
     }
-    .servicios-web-desc img{
-        width: 100%;
-        margin: 0;
-        object-fit: contain;
-    }
 }
-@media (max-width: 450px){
-    .servicios-web-first h3{
-        font-size: 35px;
+@media (max-width: 400px){
+    .contenedor-web h3{
+        font-size: 40px;
     }
-    .servicios-web-desc p{
-        font-size: 18px;
+    .web-p p{
+        font-size: 25px;
+    }
+    .servicios-web-first h3{
+        font-size: 30px;
     }
     .servicios-web-second h4{
         font-size: 30px;
