--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,16 @@
 /* ESTILOS GENERALES */
+/* .gris{
+    background: rgba(0, 0, 0, 0.26);
+} */
+.body::-webkit-scrollbar{
+    width: 15px;
+    background: #fff;
+    background: #ccc;
+}
+.body::-webkit-scrollbar-thumb{
+    background: #03213a;
+    /* background: #ffd366; */
+}
 
 *{
     margin: 0;
@@ -7,9 +19,13 @@
 .centrar{
     margin: 0 auto;
 }
-.show{
+/* .show{
     background-color: #03213a;
-    /* background-color: transparent; */
+     background-color: transparent; 
+     background: rgb(20, 207, 20);
+} */
+.fondo-nav{
+    background-color: #03213a;
 }
 .show .nav-link-custom{
     background-color: rgba(0, 0, 0, 0.2);
@@ -20,7 +36,9 @@
     height: 20px;
 }
 
-
+.color-btn-icon{
+    color: aqua !important;
+}
 /* HEADER CONTENEDOR*/
 
 .contenedor-header{
@@ -47,8 +65,7 @@
     text-align: center;
     padding: 5px ;
     color: #fff;
-    font-size: 15px;
-    text-transform: uppercase;
+    font-size: 18px;
    
 }
 .nav-link-custom:hover{
@@ -57,7 +74,7 @@
 .nav-link-service{
     padding: 5px ;
     margin: 0;
-    font-size: 15px;
+    font-size: 18px;
     color: #fff !important;
 }
 .nav-link-service:hover{
@@ -90,7 +107,8 @@
     display: flex;
     flex-direction: column;
     background-image: url('../img/fondo-index.jpg');
-    background-color: rgb(73, 75, 75);
+    background-image: url('https://codivit.com/wp-content/uploads/2020/11/bg-1.png');
+    background-color: rgb(61, 61, 61);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -106,7 +124,7 @@
     padding: 10px; 
     font-size: 100px;
     color: #fff;
-    font-family: 'Raleway' , sans-serif;
+    font-family: 'Lato' , sans-serif;
     text-align: center;
     align-self: center;
    
@@ -157,11 +175,8 @@
 .servicios{
     width: 100%;
     height: 100%;
-    /* background: #03213a; */
-  /*   background: #fff; */
-     background: #fff;
-    
-     padding: 10px 0 50px 0;
+    background: #fff;
+    padding: 10px 0 50px 0;
 }
     .servicios h1{
         color: #000;
@@ -169,7 +184,7 @@
         font-family: 'Roboto', sans-serif;
         text-align: center;
         margin: 25px;
-        padding: 50px;
+        padding: 80px;
     }
     .servicios h1::after{
         content: "";
@@ -191,12 +206,12 @@
         .servicios-card{
             height: 100%;
             width: 400px;
-            background: rgba(0, 0, 0, 0.1);
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin: 10px;
+            margin: 20px;
             padding: 10px;
+            box-shadow: 0 10px 30px -10px rgb(35, 36, 36);
         }
         .margin-a{
             margin: 10px;
@@ -212,12 +227,13 @@
             }
             .servicios-card h3{
                 color: #000;
-                font-size: 30px;
+                font-size: 40px;
+                font-weight: bolder;
                 font-family: 'Roboto', sans-serif;
             }
             .servicios-card p{
                 color: #000;
-                font-size: 18px;
+                font-size: 20px;
                 padding: 15px 5px;
                 font-family: 'Roboto', sans-serif;
                 text-align: center;
@@ -246,35 +262,36 @@
 
 
 
+        /*     SOBRE NOSOTROS */
+
 .sobre-nosotros{
-   /*  background-color: darkred;
+    background-color: darkred;
     background-image: url('https://cdn.pixabay.com/photo/2018/03/10/12/00/paper-3213924_960_720.jpg');
     background-image: url('https://images.unsplash.com/photo-1499540633125-484965b60031?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80');
-    
-    background-color: rgb(73, 75, 75);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-blend-mode: soft-light; */
-    background-color: linear-gradient(to right, #ff6b3e, #ffac34);
+    background-color: rgb(35, 36, 36);
+    background-size: contain;
+    background-blend-mode: soft-light; 
+   /*  background-color: linear-gradient(to right, #ff6b3e, #ffac34);
     background: linear-gradient(to right, #123343, #14568d);
-    padding: 100px 0;
+   */
 }
 .contenedor-sobre-nosotros{
-    width: 80%;
-    margin: 0 auto;
-    padding: 20px 10px;
+    width: 100%;
+    padding: 50px;
 }
 .contenedor-sobre-nosotros h3{
     font-family: 'Raleway', sans-serif;
-    font-weight: 500;
-    font-size: 50px;
+    font-family: 'Lato', sans-serif;
+    font-weight: bolder;
+    font-size: 60px;
     color: #ffd366;
+    text-align: center;
 }
 .contenedor-sobre-nosotros p{
     font-family: 'Raleway', sans-serif;
+    font-family: 'Roboto', cursive;
     font-weight: 300;
-    font-size: 24px;
+    font-size: 30px;
     color: #fff;
 }
 .card img{
@@ -288,6 +305,7 @@
         background-color: #fff;
         width: 100%;
         height: 100%;
+        padding: 30px 0;
 }
     .trabajos h2{
         color: #000;
@@ -360,7 +378,7 @@
  }
     .equipo h2{
         color: #fff;
-        font-size: 50px;
+        font-size: 60px;
         font-family: 'Roboto', sans-serif;
         text-align: center;
         padding: 30px 0 0 0;
@@ -384,7 +402,7 @@
         font-size: 30px;
         padding: 30px 0 ;
         color: #fff;
-        font-family: 'Rubik', sans-serif;
+        font-family: 'Roboto', sans-serif;
         letter-spacing: 2px;
     }
     .contenedor-team-btn{
@@ -421,7 +439,7 @@
         font-size: 60px;
         font-family: 'Roboto', sans-serif;
         text-align: center;
-        padding: 20px;
+        padding: 40px;
     }
     .contacto-texto h3::after{
         content: "";
@@ -464,11 +482,17 @@
         background-color: #fffb59;
     }
     .contenedor-check{
+        width: 100%;
         display: flex;
         justify-content: space-around;
         margin: 20px 0;
         color: #000;
     }
+    
+.modal-footer button{
+    margin: 0 auto;
+    background-color: aqua;
+}
 
 
    /*  PIE DE LA PAGINA */
@@ -504,12 +528,15 @@
         padding: 10px;
     }
     .footer-texto h3{
-        font-size: 40px;
+        font-size: 30px;
+        font-family: 'Lato';
         font-weight: bolder;
         color: #ffe83f;
         padding: 0 0 20px 0;
+        text-transform: uppercase;
     }
     .footer-texto p{
+        font-family: 'Lato';
         font-size: 18px;
         color: #fff;
     }
@@ -544,6 +571,18 @@
         cursor: pointer;
     }
    
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media (max-width: 965px){
     .header-encabezado h3{
@@ -706,6 +745,9 @@
     .servicios-card{
         width: 300px;
        margin: 10px 0;
+    }
+    .servicios-card h3{
+        font-size: 30px;
     }
     .trabajos h2{
         font-size: 30px;
