--- a/css/marketing.css
+++ b/css/marketing.css
@@ -25,194 +25,126 @@
     color: #fff;
     font-family: 'Raleway';
     text-align: center;
-    padding: 30px 0;
+    padding: 20px 10px;
 }
 .contenedor-marketing p{
-    font-size: 20px;
+    font-size: 25px;
     text-align: center;
     color: #fff;
     padding: 20px;
 }
 .contendor-marketing-first{
     width: 100%;
-    background-color: transparent;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
     padding: 30px 0;
 }
-.contenedor-redes-text{
-    width: 400px;
+.contenedor-first-text{
+    width: 500px;
     padding: 30px 0;
 }
-.contenedor-redes-text p{
-    font-size: 22px;
+.contenedor-first-text p{
+    font-size: 25px;
     color: #fff;
-    text-align: left;
-}
-.contenedor-beneficios-redes{
-    width: 600px;
-    height: 100%;
-    background-image: url('https://images.unsplash.com/photo-1483478550801-ceba5fe50e8e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');
-    background-color: rgb(73, 75, 75);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-blend-mode: soft-light;
-    display: flex;
-    flex-wrap: wrap;
-    margin: 30px;
-}
-.beneficios-redes-text{
     text-align: center;
-    justify-content: center;
-    padding: 40px 10px;
-    margin: 0 auto;
+    padding: 10px;
 }
-.beneficios-redes-text h4{
-    font-size: 40px;
-    color: #fff;
-    padding: 10px 0;
+.contenedor-first-video{
+    width: 500px;
 }
-.beneficios-redes-text p{
-    font-size: 20px;
-    color: #fff;
+.contenedor-first-video video{
+    width: 500px;
+    height: 600px;
+    object-fit: cover;
 }
-.beneficios-redes-text ul li{
-    color: #fff;
-    padding: 10px 0;
+.marketing-desc{
+    background-color: #fff ;
 }
-.beneficios-redes-text button{
-    align-content: center;
+.marketing-desc h3{
+    color: #000;
 }
-.contenedor-marketing-images{
+.contenedor-marketing-imagenes{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-flow: row wrap;
     padding: 20px 0;
-    background-color: #fff;
 }
-.contenedor-marketing-images img{
-    width: 400px;
-    height: 400px;
-    padding: 0;
+.images-marketing{
+    width: 350px;
+    height: 350px;
+    margin: 20px;
+    box-shadow: 2px 2px  10px #000;
+}
+.images-marketing img{
+    width: 350px;
+    height: 350px;
 }
 .images-marketing p{
-    width: 100%;
+    position: relative;
+    top: -20%;
     font-family: 'Raleway';
     font-weight: 300;
     color: #000;
     font-size: 20px;
-    padding: 0 80px;
+    padding: 0;
+    margin: 0;
+   
 }
-.images-marketing p::after{
-    content: "";
+.contenedor-btn-modal{
     width: 100%;
-    height: 3px;
-    background: #fffb59 ;
-    display: block;
-    margin: 0 0 120px 0;
+    display: flex;
+    justify-content: center;
+    padding: 30px 0;
 }
 
 
-@media (max-width: 800px){
-    .contenedor-beneficios-redes{
-        width: 100%;
-    }
-    .contenedor-redes-text{
+@media (max-width: 1000px){
+    .contenedor-first-text{
         width: 100%;
         padding: 20px;
     }
-    .images-marketing{
-        display: flex;
-        flex-flow: row wrap;
-        margin: 10px 0;
-        width: 100%;
-    }
-    .images-marketing p{
-        margin: 0;
-        align-self: center;
-        font-size: 25px;
-    }
-    .contenedor-marketing-second{
-        align-items: center;
-        justify-content: center;
-        margin:  0 auto;
-    }
-    .marketing-second-text{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
 }
+
 @media (max-width: 765px){
     .contendor-marketing-first h3{
         font-size: 40px;
         padding: 10px 0;
     }
-    .contendor-marketing-first p{
-        margin: 0 50px;
+    .contenedor-first-text p{
         font-size: 20px;
     }
-    .images-marketing {
-        align-items: center;
-        justify-content: center;
-        margin:  0 auto;
-    }
-
-}
-@media (max-width: 690px){
-    .images-marketing {
-        align-items: center;
-        justify-content: center;
-        margin:  0 auto;
-    }
-    .marketing-second-text{
+    .contenedor-video{
         width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
     }
-    .marketing-second-text button{
-       margin: 0;
+    .contenedor-video video{
+        width: 100%;
+        padding: 30px;
     }
-    .marketing-second-text h4{
-        font-size: 30px;
-        padding: 10px 0;
+}
+@media (max-width: 540px){
+    .contenedor-marketing h3{
+        font-size: 40px;
     }
-    .marketing-second-text p{
-        font-size: 20px;
+    .contenedor-marketing p{
+        font-size: 25px;
+    }
+    .contenedor-first-text p{
+        margin: 0;
+        font-size: 25px;
+    }
+    .contenedor-first-video video{
+        width: 100%;
+        padding: 20px;
     }
 }
 @media (max-width: 500px){
-    .contendor-marketing-first h3{
-       
-        font-size: 30px;
-        padding: 10px;
-    }
-    .contendor-marketing-first p{
-        margin: 0 10px;
-        padding: 10px;
-        font-size: 16px;
-    }
-    .contenedor-marketing-images img{
-        width: 300px;
-        height: 300px;
-        padding: 0;
-    }
-    .images-marketing p{
-        font-size: 25px;
-    }
-    .marketing-second-text h4{
-        font-size: 25px;
-        padding: 10px 0;
-    }
-    .marketing-second-text p{
-        font-size: 16px;
-    }
+   .contenedor-marketing h3{
+       font-size: 30px;
+   }
+   .contenedor-marketing p{
+       font-size: 25px;
+   }
 }
 @media (max-width: 450px){
     .marketing-second-text ul li{
@@ -229,6 +161,10 @@
         font-size: 18px;
         padding: 10px 0;
         font-weight: bolder;
+    }
+    .images-marketing {
+        margin: 10px;
+        
     }
     .images-marketing p{
         font-size: 25px;
