--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -7,13 +7,14 @@
     background-blend-mode: soft-light;
 }
 .contenedor-team{
-    padding: 30px;
-    background-color: #4c0949;
+    padding: 80px;
+    background-color: #fff;
 }
 .contenedor-team h3{
     font-size: 50px;
     font-family: 'Raleway';
-    color: #fff;
+    color: #000;
+    padding: 30px;
 }
 .contenedor-team h3::after{
     content: "";
@@ -24,9 +25,10 @@
     margin: 20px auto 0 auto;
 }
 .contenedor-team p{
-    color: #fff;
-    font-size: 20px;
+    color: #000;
+    font-size: 25px;
     padding: 40px;
+    font-family: 'Roboto';
     text-align: center;
 }
 .contenedor-person{
